--- a/deploy/values.yaml
+++ b/deploy/values.yaml
@@ -8,6 +8,10 @@ application:
         DB_NAME: "nordmartDB"
         MONGO_HOST: "review-mongodb"
         JAEGER_ENDPOINT: "http://jaeger-collector.istio-system:14268/api/traces"
+ route:
+      enabled: true
+      additionalLabels:
+              router: default
  deployment:
    additionalLabels:
      appCategory: "backend"
